// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkNotesTSV7DataRow() -  Occurrence Note tests -  should find empty note 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "n7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "n7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in Note",
      "priority": 787,
      "rowID": "n7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "Note",
      "location": " from test line",
      "message": "Missing Note field",
      "priority": 274,
      "rowID": "n7qw",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  Occurrence Note tests -  should find white space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "m7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "m7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in Note",
      "priority": 787,
      "rowID": "m7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "Note",
      "location": " from test line",
      "message": "Field is only whitespace",
      "priority": 373,
      "rowID": "m7qw",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  invalid Original Language 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "1",
      "bookID": "GEN",
      "fieldName": "Occurrence",
      "location": " from test line",
      "message": "Missing occurrence field when we have an original quote",
      "priority": 750,
      "rowID": "f2mg",
    },
    Object {
      "C": "1",
      "V": "1",
      "bookID": "GEN",
      "fieldName": "Occurrence",
      "location": " from test line",
      "message": "Missing occurrence field",
      "priority": 791,
      "rowID": "f2mg",
    },
  ],
  "suggestion": "1:1	f2mg			0	1	In the beginning, God created the heavens and the earth “This is about how God made the heavens and the earth in the beginning.” This statement summarizes the rest of the chapter. Some languages translate it as “A very long time ago God created the heavens and the earth.” Translate it in a way that shows this actually happened and is not just a folk story.",
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail to find OrigLang Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "b7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "b7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "verse text ◗וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃◖",
      "excerpt": "וְ⁠חֹ֖שֶךְ",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "b7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "b7qw",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with leading space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "e7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "e7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "␣וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unexpected leading space",
      "priority": 109,
      "rowID": "e7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "details": "verse text ◗וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃◖",
      "excerpt": "(ּ=D1468/H5bc) וְ⁠חֹ֖שֶׁךְ occurrence=1",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Seems original language quote might not start at the beginning of a word",
      "priority": 909,
      "rowID": "e7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "e7qw",
    },
  ],
  "suggestion": "1:2	e7qw		figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with leading word joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "g7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "g7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "‼וְ‼חֹ֖שֶׁךְ",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unexpected leading word-joiner",
      "priority": 770,
      "rowID": "g7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which starts with 'word joiner'",
      "excerpt": "⁠וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "g7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "g7qw",
    },
  ],
  "suggestion": "1:2	g7qw		figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with leading zero width joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "k7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "k7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "‼וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unexpected leading zero-width joiner",
      "priority": 771,
      "rowID": "k7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which starts with 'zero-width joiner'",
      "excerpt": "‍וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "k7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "k7qw",
    },
  ],
  "suggestion": "1:2	k7qw		figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with leading zero width non-joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "i7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "i7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "verse text ◗וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃◖",
      "excerpt": "‌וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "i7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "i7qw",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with trailing space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "f7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "f7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "excerpt": "⁠חֹ֖שֶׁךְ␣",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unexpected trailing space(s)",
      "priority": 95,
      "rowID": "f7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "f7qw",
    },
  ],
  "suggestion": "1:2	f7qw		figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with trailing word joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "h7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "h7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "וְ‼חֹ֖שֶׁךְ‼",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unexpected trailing word-joiner",
      "priority": 772,
      "rowID": "h7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which ends with 'word joiner'",
      "excerpt": "וְ⁠חֹ֖שֶׁךְ⁠",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "h7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "h7qw",
    },
  ],
  "suggestion": "1:2	h7qw		figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with trailing zero width joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "l7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "l7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "וְ⁠חֹ֖שֶׁךְ‼",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unexpected trailing zero-width joiner",
      "priority": 773,
      "rowID": "l7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which ends with 'zero-width joiner'",
      "excerpt": "וְ⁠חֹ֖שֶׁךְ‍",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "l7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "l7qw",
    },
  ],
  "suggestion": "1:2	l7qw		figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with trailing zero width non-joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "j7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "j7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "verse text ◗וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃◖",
      "excerpt": "וְ⁠חֹ֖שֶׁךְ‌",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "j7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "j7qw",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should fail with valid but high occurrence number 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "2",
      "bookID": "MAT",
      "details": "occurrence=2 but only 1 occurrence found, passage ◗λέγοντες, ποῦ ἐστιν ὁ τεχθεὶς Βασιλεὺς τῶν Ἰουδαίων? εἴδομεν γὰρ αὐτοῦ τὸν ἀστέρα ἐν τῇ ἀνατολῇ καὶ ἤλθομεν προσκυνῆσαι αὐτῷ.◖",
      "excerpt": "προσκυνῆσαροσκυνῆσαι",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Unable to find duplicate original language quote in verse text",
      "priority": 917,
      "rowID": "v248",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  Original Quote tests -  should find missing Original Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "3",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "a7qw",
    },
    Object {
      "C": "1",
      "V": "3",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "a7qw",
    },
    Object {
      "C": "1",
      "V": "3",
      "bookID": "GEN",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Missing Quote field",
      "priority": 919,
      "rowID": "a7qw",
    },
    Object {
      "C": "1",
      "V": "3",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "a7qw",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  SupportReference tests -  should find long SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "not 5",
      "excerpt": "r7q33",
      "fieldName": "ID",
      "location": " from test line",
      "message": "Row ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "r7q33",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "r7q33",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "r7q33",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "r7q33",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  SupportReference tests -  should find missing SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "Reference",
      "location": " from test line",
      "message": "Missing row ID field",
      "priority": 931,
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  SupportReference tests -  should find short SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "not 3",
      "excerpt": "q7q",
      "fieldName": "ID",
      "location": " from test line",
      "message": "Row ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "q7q",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "q7q",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "q7q",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "q7q",
    },
  ],
  "suggestion": undefined,
}
`;

exports[`checkNotesTSV7DataRow() -  TSV format tests -  empty line should fail 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 1 field",
      "location": " from test line",
      "message": "Found wrong number of TSV fields (expected 7)",
      "priority": 984,
      "rowID": undefined,
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  TSV format tests -  should fail not TSV 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 1 field",
      "location": " from test line",
      "message": "Found wrong number of TSV fields (expected 7)",
      "priority": 984,
      "rowID": undefined,
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  TSV format tests -  should find wrong row count 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 6 fields",
      "location": " from test line",
      "message": "Found wrong number of TSV fields (expected 7)",
      "priority": 984,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail broken link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line figs-parallelism/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-parallelism/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=0",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=2, right=1",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=0",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched () characters",
      "priority": 563,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail broken link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line figs-parallelism/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-parallelism/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=0, right=1",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=2",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=0",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched () characters",
      "priority": 563,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail double broken link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line figs-parallelism/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-parallelism/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=0",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=2, right=0",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail double broken link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line figs-parallelism/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-parallelism/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=0, right=2",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail if SupportReference link differs from link in OccurrenceNote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "6",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "urb3",
    },
    Object {
      "C": "1",
      "V": "6",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "urb3",
    },
    Object {
      "C": "1",
      "V": "6",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in Note",
      "priority": 787,
      "rowID": "urb3",
    },
    Object {
      "C": "1",
      "V": "6",
      "bookID": "GEN",
      "details": "need to carefully check \\"[[rc://*/ta/man/figs-parallelism]]\\"",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Unusual [[ ]] link(s)—not a recognized TA or TW link",
      "priority": 649,
      "rowID": "urb3",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail invalid doublet link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-parallelism",
      "fieldName": "SupportReference",
      "location": " from test line figs-parallelism/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-parallelism/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "need to carefully check \\"[Doublet](../figs-doublet/01.md)\\"",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Unusual [ ]( ) link(s)—not a recognized Bible or TA, TN, or TW link",
      "priority": 648,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "SR='figs-parallelism'",
      "excerpt": "figs-parallelism",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail invalid first link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "excerpt": "figs-activepassive",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-activepassive",
      "fieldName": "SupportReference",
      "location": " from test line figs-activepassive/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-activepassive/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "unfoldingWord en_ta master translate/figs-activepassivez/01.md",
      "excerpt": "[[rc://*/ta/man/translate/figs-activepassivez]]",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line translate/figs-activepassivez/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/figs-activepassivez/01.md",
      "message": "Error loading TA article",
      "priority": 885,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "SR='figs-activepassive'—found 2 TA links",
      "excerpt": "[\\"figs-activepassivez\\",\\"figs-imperative\\"]",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "zu6f",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail invalid link path 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "7",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "urb3",
    },
    Object {
      "C": "1",
      "V": "7",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "urb3",
    },
    Object {
      "C": "1",
      "V": "7",
      "bookID": "GEN",
      "details": "need to carefully check \\"[[rc://*/ta/woman/figs-imperative]]\\"",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Unusual [[ ]] link(s)—not a recognized TA or TW link",
      "priority": 649,
      "rowID": "urb3",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail invalid second link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "excerpt": "figs-activepassive",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-activepassive",
      "fieldName": "SupportReference",
      "location": " from test line figs-activepassive/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-activepassive/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "unfoldingWord en_ta master translate/figs-imperativez/01.md",
      "excerpt": "[[rc://*/ta/man/translate/figs-imperativez]]",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line translate/figs-imperativez/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/figs-imperativez/01.md",
      "message": "Error loading TA article",
      "priority": 885,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "SR='figs-activepassive'—found 2 TA links",
      "excerpt": "[\\"figs-activepassive\\",\\"figs-imperativez\\"]",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "zu6f",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail invalid verse link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "need to carefully check \\"[Genesis 1:7](../01/zzz.md)\\"",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Unusual [ ]( ) link(s)—not a recognized Bible or TA, TN, or TW link",
      "priority": 648,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail invalid verse link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "left=1, middle=1, right=0",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [ ]( ) link characters",
      "priority": 843,
      "rowID": "ha33",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "left=1, right=0",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched () characters",
      "priority": 563,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  link tests -  should fail invalid verse link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "left=0, right=1",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  should find invalid Book ID, chapter number, ID, SupportReference, quotes, OccurrenceNote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GIN",
      "location": " 'GIN' in first parameter: Error: expectedVersesPerChapterList() given invalid bookId: 'GIN'",
      "message": "Invalid book identifier passed to checkNotesTSV7DataRow",
      "priority": 979,
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GIN",
      "details": "Found 8 fields",
      "location": " from test line",
      "message": "Found wrong number of TSV fields (expected 7)",
      "priority": 984,
      "rowID": "W-3r5",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  should find invalid SupportReference and missing quotes 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Only 'Just-In-Time Training' TA articles allowed here",
      "priority": 788,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line Laugh/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/Laugh/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in Note",
      "priority": 787,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "fieldName": "Quote",
      "location": " from test line",
      "message": "Missing Quote field",
      "priority": 919,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  should find language code instead of asterisk 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "EXO",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "u7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "EXO",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "u7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "EXO",
      "characterIndex": 90,
      "details": "not 'en'",
      "excerpt": "…e: [[rc://en/ta/man/…",
      "fieldName": "Note",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Resource container link should have '*' language code",
      "priority": 450,
      "rowID": "u7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "EXO",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "u7qw",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  should find mismatched bookId 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "t7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "t7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "t7qw",
    },
  ],
}
`;

exports[`checkNotesTSV7DataRow() -  should find mismatched chapter verse 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "details": "expected '22'",
      "excerpt": "2",
      "fieldName": "Reference",
      "location": " from test line",
      "message": "Wrong chapter number",
      "priority": 976,
      "rowID": "s7qw",
    },
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "details": "expected '33'",
      "excerpt": "3",
      "fieldName": "Reference",
      "location": " from test line",
      "message": "Wrong verse number",
      "priority": 975,
      "rowID": "s7qw",
    },
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line undefined",
      "message": "Badly formatted Resource Container link",
      "priority": 879,
      "rowID": "s7qw",
    },
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line figs-imperative/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/figs-imperative/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "s7qw",
    },
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "details": "SR='figs-imperative'",
      "excerpt": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when Note has a TA link",
      "priority": 789,
      "rowID": "s7qw",
    },
  ],
}
`;
